--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="screen"></div>
+        <div class="screen">
+            <div class="operation">
+                <p id="opt">1 + 1</p>
+            </div>
+            <div class="result">
+                <div class="iqual">
+                    <img src="./assets/iqual.svg" alt="iqual sign">
+                </div>
+                <p>2</p>
+            </div>
+        </div>
         <div class="numbers_signals"></div>
     </div>
 </body>
