index-style-update

--- a/index.html
+++ b/index.html
@@ -26,7 +26,68 @@
                 <p>2</p>
             </div>
         </div>
-        <div class="numbers_signals"></div>
+        <div class="numbers_signals">
+            <div class="button ce">
+                <p>CE</p>
+            </div>
+            <div class="button">
+                <p>C</p>
+            </div>
+            <div class="button">
+                <img src="./assets/percentage.svg" alt="percentage sign">
+            </div>
+            <div class="button operations">
+                <img src="./assets/division.svg" alt="division sign">
+            </div>
+            <div class="button">
+                <p>7</p>
+            </div>
+            <div class="button">
+                <p>8</p>
+            </div>
+            <div class="button">
+                <p>9</p>
+            </div>
+            <div class="button operations">
+                <img src="./assets/multiplication.svg" alt="multiplication sign">
+            </div>
+            <div class="button">
+                <p>4</p>
+            </div>
+            <div class="button">
+                <p>5</p>
+            </div>
+            <div class="button">
+                <p>6</p>
+            </div>
+            <div class="button operations">
+                <img src="./assets/minus.svg" alt="minus sign">
+            </div>
+            <div class="button">
+                <p>1</p>
+            </div>
+            <div class="button">
+                <p>2</p>
+            </div>
+            <div class="button">
+                <p>3</p>
+            </div>
+            <div class="button operations">
+                <img src="./assets/plus.svg" alt="plus sign">
+            </div>
+            <div class="button">
+                <img src="./assets/plus_minus.svg" alt="plus/minus sign">
+            </div>
+            <div class="button">
+                <p>0</p>
+            </div>
+            <div class="button comma">
+                <p>,</p>
+            </div>
+            <div class="button iqual-button">
+                <img src="./assets/iqual_button.svg" alt="iqual sign">
+            </div>
+        </div>
     </div>
 </body>
 </html>
